--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -128,12 +128,18 @@
           <div class="col-8 d-flex justify-content-end">
             <div class="row">
               <div class="col-4" *ngIf="isCollapsibleOpen">
-                <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editSchedule" title="Edit">
-                  <i class="fa-solid fa-pencil"></i>
+                <!-- <button type="button" id="openModalButtonEdit" class="btn btn-primary icon" data-bs-toggle="modal" data-bs-target="#editSchedule" title="Edit" >
+                </button> -->
+                <button id="openModalButtonEdit" [hidden]="true"  data-bs-toggle="modal" data-bs-target="#editSchedule" >edits</button>
+                <button type="button" class="btn  icon"  title="Edit" >
+                  <i class="fa-solid fa-pencil " (click)="openEditScheduleModal()"></i>
+
                 </button>
+
               </div>
               <div class="col-4" *ngIf="isCollapsibleOpen">
                 <button type="button" id="icon" class="btn btn-danger me-2" data-bs-toggle="modal" data-bs-target="#deleteSchedule" title="Delete">
+                  
                   <i class="fa-solid fa-trash-can"></i>
                 </button>
               </div>
@@ -1078,92 +1084,41 @@
             </ng-template>
       </p-table> -->
       <!-- <p-table [value]="sectionArray" [tableStyle]="{'min-width': '300px'}" selectionMode="single" [(selection)]="selectedSection" dataKey="code" editMode="row"> -->
-        <p-table [value]="sectionArray" [tableStyle]="{'min-width': '300px'}" selectionMode="single" [(selection)]="selectedSection" dataKey="code" editMode="row"  >
+        <p-table [value]="sections" [tableStyle]="{'min-width': '300px'}" selectionMode="single" [(selection)]="selectedSection" dataKey="code" editMode="row">
           <ng-template pTemplate="header">
-              <tr>
-                  <th>Group</th>
-                  <th>Row Num</th>
-                  <th>Code</th>
-                  <th>Short Description</th>
-                  <th>Description</th>
-                  <th>Limit Amount</th>
-                  <th>Premium Rate</th>
-                  <th>Rate Type</th>
-                  <th></th>
-              </tr>
+            <tr>
+              <th>Group</th>
+              <th>Row Num</th>
+              <th>Code</th>
+              <th>Short Description</th>
+              <th>Description</th>
+              <th>Limit Amount</th>
+              <th>Premium Rate</th>
+              <th>Rate Type</th>
+              <th></th>
+            </tr>
           </ng-template>
           <ng-template pTemplate="body" let-sectionArray let-editing="editing" let-ri="rowIndex">
-              <tr (click)="onSelectSection(sectionArray)" [pEditableRow]="sectionArray">
-                  <td>
-                      {{sectionArray.calcGroup}}
-                  </td>
-                  <td>
-                      {{sectionArray.rowNumber}}
-                  </td>
-                  <td>
-                      {{sectionArray.code}}
-                  </td>
-                  <td>
-                      {{sectionArray.sectionShortDescription}}
-                  </td>
-                  <td>
-                      {{sectionArray.description}}
-                  </td>
-                  <td>
-                    {{sectionArray.limitAmount}}
-                  </td>
-                  <td>
-                    {{sectionArray.premiumRate}}
-                  </td>
-                  <td>
-                    {{sectionArray.rateType}}
-                  </td>
-                  <!-- <td>
-                      <p-cellEditor>
-                          <ng-template pTemplate="input">
-                              <input pInputText type="text" [(ngModel)]="sectionArray.limitAmount">
-                          </ng-template>
-                          <ng-template pTemplate="output">
-                              {{sectionArray.limitAmount}}
-                          </ng-template>
-                      </p-cellEditor>
-                  </td>
-                  <td>
-                      <p-cellEditor>
-                          <ng-template pTemplate="input">
-                              <input pInputText type="text" [(ngModel)]="sectionArray.premiumRate">
-                          </ng-template>
-                          <ng-template pTemplate="output">
-                              {{sectionArray.premiumRate}}
-                          </ng-template>
-                      </p-cellEditor>
-                  </td>
-                  <td>
-                      <p-cellEditor>
-                          <ng-template pTemplate="input">
-                              <input pInputText type="text" [(ngModel)]="sectionArray.rateType">
-                          </ng-template>
-                          <ng-template pTemplate="output">
-                              {{sectionArray.rateType}}
-                          </ng-template>
-                      </p-cellEditor>
-                  </td> -->
-
-                  <td>
-                      <!-- <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow icon="pi pi-pencil"  class="p-button-rounded p-button-text"></button> -->
-  
-                      <button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow class="p-button-rounded p-button-text"
-                      (click)="onEditButtonClick(sectionArray)">
-                      <i class="fas fa-pencil"></i>
-                      </button>
-
-
-                      <!-- <button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow icon="pi pi-check" (click)="updateRiskSection()" class="p-button-rounded p-button-text p-button-success mr-2"></button>
-                      <button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" class="p-button-rounded p-button-text p-button-danger"></button> -->
-                  </td>
-              </tr>
+            <tr (click)="onSelectSection(sectionArray)" [pEditableRow]="sectionArray">
+              <td>{{sectionArray.calcGroup}}</td>
+              <td>{{sectionArray.rowNumber}}</td>
+              <td>{{sectionArray.code}}</td>
+              <td>{{sectionArray.sectionShortDescription}}</td>
+              <td>{{sectionArray.description}}</td>
+              <td>{{sectionArray.limitAmount}}</td>
+              <td>{{sectionArray.premiumRate}}</td>
+              <td>{{sectionArray.rateType}}</td>
+              <td>
+                <!-- Edit Button -->
+                <button pButton pRipple type="button" pInitEditableRow class="p-button-rounded p-button-text"
+                        (click)="onEditButtonClick(sectionArray)">
+                  <i class="fas fa-pencil"></i>
+                </button>
+              </td>
+            </tr>
           </ng-template>
-      </p-table>
+        </p-table>
+        
       
         
     </div>
