--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.html
@@ -12,17 +12,22 @@
                 <select  class="form-select form-control-sm mb-1" id="quote-input"  formControlName="source"  placement="right" >
                     <option selected="true" disabled="disabled"></option>
                     <option *ngFor="let data of quotationSources"  [value]="data.code" >{{data.description}}</option>
-                  x
-
                   </select >
-
+                    <div *ngIf="quotationForm.get('source').hasError('required') && quotationForm.get('source').touched"
+                        class="form-text text-danger">
+                        Source is required.
+                    </div>
+                
             </div>
             
             <div class="col-xl-4">
                 <label for=""class="quote-label">Intermediary<span class="required"></span></label>
                 <!-- <p-dropdown formControlName="agentCode" [options]="agents" optionLabel="name" [filterBy]="'name'" (onChange)="agentShortDesc()" [filter]="true" ></p-dropdown> -->
                 <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="agentCode" data-bs-toggle="modal" data-bs-target="#selectIntermediary">
-
+                <div *ngIf="quotationForm.get('agentCode').hasError('required') && quotationForm.get('agentCode').touched"
+                class="form-text text-danger">
+                Intermediary is required.
+                </div>
             </div>
     <!-- Modal -->
     <div class="modal fade" id="selectIntermediary" tabindex="-1" aria-labelledby="selectIntermediaryLabel" aria-hidden="true">
@@ -90,7 +95,9 @@
             <div class="col-xl-4">
                 <label for=""class="quote-label">Branch<span class="required" ></span></label>
                 <p-dropdown formControlName="branchCode" [options]="branch" optionLabel="name" placeholder=" " [filterBy]="'name'" [filter]="true" ></p-dropdown>
-               
+                <div *ngIf="quotationForm.get('branchCode').hasError('required') && quotationForm.get('branchCode').touched" class="form-text text-danger">
+                    Branch is required.
+                </div>
             </div>
            
           </div>
@@ -98,14 +105,23 @@
             <div class="col-xl-4">
                 <label for=""class="quote-label">Currency<span class="required"></span></label><br>
                 <p-dropdown formControlName="currencyCode" [options]="currency" optionLabel="name" [filterBy]="'name'" placeholder=" " [filter]="true" ></p-dropdown>
+                <div *ngIf="quotationForm.get('currencyCode').hasError('required') && quotationForm.get('currencyCode').touched" class="form-text text-danger">
+                    Currency is required.
+                </div>
             </div>
             <div class="col-xl-4">
                 <label for=""class="quote-label">Request for quote date</label>
                 <input type="date" id="quote-input" class="form-control form-control-sm mb-1" (change)="updateQuotationExpiryDate($event)" formControlName="RFQDate">
+                <div *ngIf="quotationForm.get('RFQDate').hasError('required') && quotationForm.get('RFQDate').touched" class="form-text text-danger">
+                    Request for quote date is required.
+                </div>
             </div>
             <div class="col-xl-4">
                 <label for=""class="quote-label">Quotation Expiry Date</label>
                 <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="expiryDate">
+                <div *ngIf="quotationForm.get('expiryDate').hasError('required') && quotationForm.get('expiryDate').touched" class="form-text text-danger">
+                    Quotation Expiry Date is required.
+                </div>
             </div>
           
            
@@ -194,7 +210,9 @@
                
                 <label for=""class="quote-label">Product</label>
                 <p-dropdown formControlName="productCode" [options]="products" optionLabel="description" [filterBy]="'description'" (onChange)="getProductClause()" placeholder=" " [filter]="true" ></p-dropdown>
-               
+                <div *ngIf="quotationForm.get('productCode').hasError('required') && quotationForm.get('productCode').touched" class="form-text text-danger">
+                    Product is required.
+                </div>
             </div>
 
 
@@ -202,10 +220,16 @@
             <div class="col-xl-4">
                 <label for=""class="quote-label">Cover From</label><br>
                 <input type="date" id="quote-input" class="form-control form-control-sm mb-1" (change)="updateCoverToDate($event)" formControlName="withEffectiveFromDate">
+                <div *ngIf="quotationForm.get('withEffectiveFromDate').hasError('required') && quotationForm.get('withEffectiveFromDate').touched" class="form-text text-danger">
+                    Cover From is required.
+                </div>
             </div>
             <div class="col-xl-4">
                 <label for=""class="quote-label">Cover To</label><br>
                 <input type="date" id="quote-input" class="form-control form-control-sm mb-1" formControlName="withEffectiveToDate">
+                <div *ngIf="quotationForm.get('withEffectiveToDate').hasError('required') && quotationForm.get('withEffectiveToDate').touched" class="form-text text-danger">
+                    Cover To is required.
+                </div>
             </div>
           </div>
           
