VQ-801B: NORMAL & QUICK QUOTE CLEANUP, +Import Policy risk screen

--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -617,8 +617,8 @@
                                 <label for="surveyDate" class="required risk-label"
                                     id="surveyDate">{{'gis.policy.quake_flood_zone'|translate}}</label><br>
 
-                                <p-dropdown [options]="" optionValue="code" optionLabel="description" placeholder=" "
-                                    [filterBy]="'description'" [filter]="true"></p-dropdown>
+                                <p-dropdown [options]="quakeZoneList" optionValue="code" optionLabel="quakeZoneName" placeholder=" "
+                                    [filterBy]="'quakeZoneName'" [filter]="true"></p-dropdown>
 
 
 
