--- a/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
+++ b/src/app/features/gis/components/quotation/components/cover-types-details/cover-types-details.component.html
@@ -1,5 +1,5 @@
 <div class="container ">
-    <p class="titleMain mt-3">Quotations: Cover types</p>
+    <p class="titleMain mt-3"> {{'gis.quotation.quotation_covertypes' | translate}}</p>
     <app-stepper [currentStep]="2" [stepperData]="steps"></app-stepper>
     <div class="container mx-2 mt-n1">
 
@@ -14,10 +14,10 @@
 
                 <div class="row ms-3">
                     <div class="col-lg-4 col-12">
-                        <p class="title2">Basic Premium</p>
+                        <p class="title2"> {{'gis.quotation.basic_premium' | translate}}</p>
                         <div class="row">
                             <div class="col-6">
-                                <p class="details-label">Value of vehicle</p>
+                                <p class="details-label"> {{'gis.quotation.value_of_vehicle' | translate}}</p>
                             </div>
                             <div class="col-6">
                                 <p class="details-label">{{ sumInsuredValue | number }}</p>
@@ -25,7 +25,7 @@
                         </div>
                         <div class="row">
                             <div class="col-6">
-                                <p class="details-label">Premium</p>
+                                <p class="details-label"> {{'gis.quotation.premium' | translate}}</p>
                             </div>
                             <div class="col-6">
                                 <p class="details-label">{{risk.premium | number:'1.2-2' }}</p>
@@ -34,7 +34,7 @@
                     </div>
                     <div class="col-lg-1 col-12"></div>
                     <div class="col-lg-4 col-12 ">
-                        <p class="title2">Levies and taxes</p>
+                        <p class="title2"> {{'gis.quotation.levies_and_taxes' | translate}}</p>
                         <div *ngFor="let tax ">
                             <div class="row">
                                 <div class="col-6">
@@ -47,7 +47,8 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-12">
-                        <p class="title2" id="totalPayablePremium">Total payable premium</p>
+                        <p class="title2" id="totalPayablePremium"> {{'gis.quotation.total_payable_premium' |
+                            translate}}</p>
                         <p class="payable-premium ">{{risk.premium | number:'1.2-2' }}</p>
 
                     </div>
@@ -57,18 +58,19 @@
                 <div class="float-start mb-4 ms-4" *ngIf="!isCardExpanded(i)">
                     <button type="button" class="btn btn-outline-primary me-2" data-bs-toggle="modal"
                         data-bs-target="#addMoreBenefits" id="btnCoverTypes"
-                        (click)="passCovertypeDesc(passedCovertypes[i].coverTypeShortDescription ,passedCovertypes[i].coverTypeCode);">Add
-                        more benefits</button>
+                        (click)="passCovertypeDesc(passedCovertypes[i].coverTypeShortDescription ,passedCovertypes[i].coverTypeCode);">
+                        {{'gis.quotation.add_more_benefits' | translate}}</button>
                     <a class="btn btn-link ms-2" (click)="toggleCollapsible(i)">
-                        View cover details
+                        {{'gis.quotation.view_cover_details' | translate}}
                     </a>
                 </div>
                 <div class="float-end mb-4 me-4 " *ngIf="!isCardExpanded(i)">
                     <button type="button" class="btn btn-outline-primary me-3" data-bs-toggle="modal"
-                        data-bs-target="#shareQuote" id="btnCoverTypes">Share quote</button>
+                        data-bs-target="#shareQuote" id="btnCoverTypes"> {{'gis.quotation.share_quote' |
+                        translate}}</button>
                     <button class="btn btn-primary" type="submit" id="btnCoverTypes"
-                        (click)="passCovertypeDesc(passedCovertypes[i].coverTypeShortDescription ,passedCovertypes[i].coverTypeCode); selectedRiskLevelPremium(risk.premium);SelectCover();">Select
-                        cover</button>
+                        (click)="passCovertypeDesc(passedCovertypes[i].coverTypeShortDescription ,passedCovertypes[i].coverTypeCode); selectedRiskLevelPremium(risk.premium);SelectCover();">
+                        {{'gis.quotation.select_cover' | translate}}</button>
                 </div>
 
                 <!-- Add More Benefits Modal -->
@@ -76,7 +78,8 @@
                     aria-hidden="true">
                     <div class="modal-dialog modal-dialog-centered" style="min-width: 608px;">
                         <div class="modal-content ps-4 pt-4 pe-4">
-                            <p class="modal-title mb-3" id="addMoreBenefitsLabel">Additional benefit details</p>
+                            <p class="modal-title mb-3" id="addMoreBenefitsLabel">
+                                {{'gis.quotation.additional_benefits_details' | translate}}</p>
 
 
                             <p-table [value]="temporaryPremiumList" id="clientTable" dataKey="code"
@@ -89,9 +92,9 @@
                                 <ng-template pTemplate="header">
                                     <tr>
                                         <th style="width: 1em;"></th> <!-- Checkbox column -->
-                                        <th style="width: 33%;">Benefit</th>
-                                        <th style="width: 33%;">Free Limit</th>
-                                        <th style="width: 33%;">Value</th>
+                                        <th style="width: 33%;"> {{'gis.quotation.benefit' | translate}}</th>
+                                        <th style="width: 33%;"> {{'gis.quotation.free_limit' | translate}}</th>
+                                        <th style="width: 33%;"> {{'gis.quotation.value' | translate}}</th>
                                     </tr>
                                 </ng-template>
                                 <ng-template pTemplate="body" let-section let-editing="editing" let-i="rowIndex">
@@ -142,11 +145,13 @@
 
                             <div class="row mt-3 mb-3">
                                 <div class="col-6">
-                                    <button type="button" data-bs-dismiss="modal" class="btn btn-link"> Back</button>
+                                    <button type="button" data-bs-dismiss="modal" class="btn btn-link">
+                                        {{'gis.quotation.back' | translate}}</button>
                                 </div>
                                 <div class="col-6 d-flex justify-content-end">
                                     <button class="btn btn-primary" type="submit" id="btnCoverTypes"
-                                        data-bs-dismiss="modal" (click)="createQuotation();">Update quote</button>
+                                        data-bs-dismiss="modal" (click)="createQuotation();">
+                                        {{'gis.quotation.update_quote' | translate}}</button>
                                 </div>
 
                             </div>
@@ -163,27 +168,31 @@
                                 <div class="col-3">
                                     <input class="form-check-input" type="radio" id="shareRadio" name="flexRadioDefault"
                                         [(ngModel)]="selectedOption" value="email" />
-                                        
+
                                     <span class="ps-2" id="shareQuoteLabel"
-                                        [ngClass]="{ 'bold-label': selectedOption === 'email' }">Email</span>
+                                        [ngClass]="{ 'bold-label': selectedOption === 'email' }">
+                                        {{'gis.quotation.email' | translate}}</span>
                                 </div>
                                 <div class="col-3">
                                     <input class="form-check-input" type="radio" id="shareRadio" name="flexRadioDefault"
                                         [(ngModel)]="selectedOption" value="sms" />
                                     <span class="ps-2" id="shareQuoteLabel"
-                                        [ngClass]="{ 'bold-label': selectedOption === 'sms' }">SMS</span>
+                                        [ngClass]="{ 'bold-label': selectedOption === 'sms' }"> {{'gis.quotation.sms' |
+                                        translate}}</span>
                                 </div>
                                 <div class="col-4">
                                     <input class="form-check-input" type="radio" id="shareRadio" name="flexRadioDefault"
                                         [(ngModel)]="selectedOption" value="whatsapp" />
                                     <span class="ps-2" id="shareQuoteLabel"
-                                        [ngClass]="{ 'bold-label': selectedOption === 'whatsapp' }">Whatsapp</span>
+                                        [ngClass]="{ 'bold-label': selectedOption === 'whatsapp' }">
+                                        {{'gis.quotation.whatsapp' | translate}}</span>
 
                                 </div>
                             </div>
 
                             <div class="form-group mt-3">
-                                <label class="mb-1" for="clientName" id="shareLabel">Client name</label>
+                                <label class="mb-1" for="clientName" id="shareLabel"> {{'gis.quotation.client_name' |
+                                    translate}}</label>
                                 <input type="text" [(ngModel)]="selectedClientName" id="clientName"
                                     class="form-control" />
                             </div>
@@ -200,7 +209,7 @@
                                 <div class="col-6"></div>
                                 <div class="col-6 d-flex justify-content-end">
                                     <button type="button" class="btn btn-primary" id="sendQoute" data-bs-dismiss="modal"
-                                        (click)="handleShare()">Send</button>
+                                        (click)="handleShare()"> {{'gis.quotation.send' | translate}}</button>
                                 </div>
                             </div>
                         </div>
@@ -210,7 +219,7 @@
                 <div *ngIf="isCollapsibleOpen && currentExpandedIndex === i" class="mt-3 MB-2">
                     <div class="row ms-3">
                         <div class="col-lg-4 col-12">
-                            <p class="title2">Additional Benefits</p>
+                            <p class="title2"> {{'gis.quotation.additional_benefits' | translate}}</p>
                             <div class="row">
                                 <div class="col-6">
                                     <p class="details-label"> {{premiumPayload.risks[i].limits[0].description}}</p>
@@ -231,7 +240,7 @@
                     </div>
                     <div>
                         <div class="row ms-3">
-                            <p class="title2"> Excess applicable under the cover</p>
+                            <p class="title2"> {{'gis.quotation.excess_applicable_under_the_cover' | translate}}</p>
                             <div class="row">
                                 <div class="col-8">
                                     <div class="row">
@@ -276,15 +285,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <p class="title2 mt-2"> Cover details</p>
+                            <p class="title2 mt-2"> {{'gis.quotation.cover_details' | translate}}</p>
                             <div class="row">
                                 <div class="col-8">
                                     <div class="row">
                                         <div class="col-6">
-                                            <p class="details-label" style="font-weight: 500;">Details</p>
+                                            <p class="details-label" style="font-weight: 500;">
+                                                {{'gis.quotation.details' | translate}}</p>
                                         </div>
                                         <div class="col-6">
-                                            <p class="details-label" style="font-weight: 500;">Benefits (KES)</p>
+                                            <p class="details-label" style="font-weight: 500;">
+                                                {{'gis.quotation.benefits' | translate}}</p>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -328,7 +339,7 @@
                                         <!-- Close Button -->
                                         <button type="button" class="btn btn-link"
                                             (click)="toggleCollapsible(currentExpandedIndex)">
-                                            Close
+                                            {{'gis.quotation.close' | translate}}
                                         </button>
 
                                     </div>
@@ -341,12 +352,14 @@
                                                 <div class="row">
                                                     <div class="col-6 d-flex justify-content-end">
                                                         <button type="button" class="btn btn-outline-primary"
-                                                            id="btnCoverTypes">Share quote</button>
+                                                            id="btnCoverTypes"> {{'gis.quotation.share_quote' |
+                                                            translate}}</button>
 
                                                     </div>
                                                     <div class="col-6">
                                                         <button class="btn btn-primary" type="submit"
-                                                            id="btnCoverTypes">Select cover</button>
+                                                            id="btnCoverTypes"> {{'gis.quotation.select_cover' |
+                                                            translate}}</button>
 
                                                     </div>
 
