--- a/src/app/features/administration/components/tickets/reinsurance-allocations/reinsurance-allocations.component.html
+++ b/src/app/features/administration/components/tickets/reinsurance-allocations/reinsurance-allocations.component.html
@@ -26,7 +26,7 @@
         <form [formGroup]="risksForm">
           <label class="col-form-label text-primary fw-bold w-100">{{'mngt_wrkflw.reinsurance.risks' | translate }}</label>
           <button
-            class="btn btn-primary" style="font-size: 12px;" (click)="populateAllocations()">{{'mngt_wrkflw.reinsurance.populateAllocations' | translate }}
+            class="btn btn-primary" style="font-size: 12px;height: 27px; line-height: normal;" (click)="populateAllocations()">{{'mngt_wrkflw.reinsurance.populateAllocations' | translate }}
           </button>
           <input
             type="text" class="form-control mt-2" placeholder="Search for a risk"
@@ -339,15 +339,15 @@
                 <div class="row">
                   <div class="col-6 d-flex ">
                     <button
-                      class="btn btn-primary" style="font-size: 12px;">{{'mngt_wrkflw.reinsurance.facreOutOfferSlip' | translate }}
+                      class="btn btn-primary" style="font-size: 12px;height: 27px; line-height: normal;">{{'mngt_wrkflw.reinsurance.facreOutOfferSlip' | translate }}
                     </button>
                     <button
-                      class="btn btn-primary" style="font-size: 12px;">{{'mngt_wrkflw.reinsurance.reinsurersDebitCreditNote' | translate }}
+                      class="btn btn-primary" style="font-size: 12px;height: 27px; line-height: normal;">{{'mngt_wrkflw.reinsurance.reinsurersDebitCreditNote' | translate }}
                     </button>
                   </div>
                   <div class="col-6 d-flex justify-content-end">
                     <button
-                      class="btn btn-primary" style="font-size: 12px;">{{'mngt_wrkflw.reinsurance.importCSV' | translate }}
+                      class="btn btn-primary" style="font-size: 12px;height: 27px; line-height: normal;">{{'mngt_wrkflw.reinsurance.importCSV' | translate }}
                     </button>
                     <span class="icon-circle "
                     ><i class="pi pi-plus"></i
