--- a/src/app/features/lms/grp/components/dashboard/components/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-dashboard/admin-dashboard.component.css
@@ -191,6 +191,21 @@
     line-height: normal;
 }
 
+.label-container:hover {
+    cursor: pointer;
+    background-color: #f0f0f0;
+    width: 50%;
+}
+
+  .breadcrumb-symbol {
+    font-weight: 500;
+    margin-left: 8px;
+    margin-right: 4px;
+    color: #5b5a5a;
+    display: inline-block;
+    transform: scale(0.7, 1.4);
+  }
+
 @media (max-width: 1200px) {
 
     .container,
