--- a/src/app/features/lms/grp/components/dashboard/components/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/admin-dashboard/admin-dashboard.component.html
@@ -32,7 +32,7 @@
 <div class="main">
     <div class="box-container">
         <div class="box">
-            <div class="col-12 mt-3">
+            <div class="col-12 mt-3 label-container" (click)="onPoliciesClick()">
                 <button class="round-button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="blue"
                         class="bi bi-shield-fill-check" viewBox="0 0 16 16">
@@ -40,7 +40,7 @@
                             d="M8 0c-.69 0-1.843.265-2.928.56-1.11.3-2.229.655-2.887.87a1.54 1.54 0 0 0-1.044 1.262c-.596 4.477.787 7.795 2.465 9.99a11.8 11.8 0 0 0 2.517 2.453c.386.273.744.482 1.048.625.28.132.581.24.829.24s.548-.108.829-.24a7 7 0 0 0 1.048-.625 11.8 11.8 0 0 0 2.517-2.453c1.678-2.195 3.061-5.513 2.465-9.99a1.54 1.54 0 0 0-1.044-1.263 63 63 0 0 0-2.887-.87C9.843.266 8.69 0 8 0m2.146 5.146a.5.5 0 0 1 .708.708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 7.793z" />
                     </svg>
                 </button>
-                <span class="pol-text">Policies</span>
+                <span class="pol-text">Policies<span class="breadcrumb-symbol">&gt;</span></span>
             </div>
             <div>
                 <table class="centered-table">
@@ -58,7 +58,7 @@
         </div>
 
         <div class="box">
-            <div class="col-12 mt-3">
+            <div class="col-12 mt-3 label-container" (click)="onClaimsClick()">
                 <button class="round-button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="blue"
                         class="bi bi-currency-dollar" viewBox="0 0 16 16">
@@ -66,7 +66,7 @@
                             d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73z" />
                     </svg>
                 </button>
-                <span class="pol-text">Claims</span>
+                <span class="pol-text">Claims<span class="breadcrumb-symbol">&gt;</span></span>
             </div>
             <div>
                 <table class="centered-table">
@@ -76,7 +76,7 @@
                     </tr>
                     <tr>
                         <td><span class="text-typography" style="color: black;">Policies</span></td>&nbsp;&nbsp;
-                        <td><span class="text-typography" style="color: black;">Sum assured</span></td>
+                        <td><span class="text-typography" style="color: black;">Claimed amount</span></td>
                     </tr>
                 </table>
             </div>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="box">
-            <div class="col-12 mt-3">
+            <div class="col-12 mt-3 label-container" (click)="onPensionClick()">
                 <button class="round-button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="blue"
                         class="bi bi-currency-dollar" viewBox="0 0 16 16">
@@ -92,17 +92,17 @@
                             d="M4 10.781c.148 1.667 1.513 2.85 3.591 3.003V15h1.043v-1.216c2.27-.179 3.678-1.438 3.678-3.3 0-1.59-.947-2.51-2.956-3.028l-.722-.187V3.467c1.122.11 1.879.714 2.07 1.616h1.47c-.166-1.6-1.54-2.748-3.54-2.875V1H7.591v1.233c-1.939.23-3.27 1.472-3.27 3.156 0 1.454.966 2.483 2.661 2.917l.61.162v4.031c-1.149-.17-1.94-.8-2.131-1.718zm3.391-3.836c-1.043-.263-1.6-.825-1.6-1.616 0-.944.704-1.641 1.8-1.828v3.495l-.2-.05zm1.591 1.872c1.287.323 1.852.859 1.852 1.769 0 1.097-.826 1.828-2.2 1.939V8.73z" />
                     </svg>
                 </button>
-                <span class="pol-text">Pension</span>
+                <span class="pol-text">Pension<span class="breadcrumb-symbol">&gt;</span></span>
             </div>
             <div>
                 <table class="centered-table">
                     <tr>
                         <td><span class="sa-premium">100</span></td>&nbsp;&nbsp;
-                        <td><span class="sa-premium">Ksh. 8,000,000</span></td>
+                        <!-- <td><span class="sa-premium">Ksh. 8,000,000</span></td> -->
                     </tr>
                     <tr>
                         <td><span class="text-typography" style="color: black;">Policies</span></td>&nbsp;&nbsp;
-                        <td><span class="text-typography" style="color: black;">Sum assured</span></td>
+                        <!-- <td><span class="text-typography" style="color: black;">Sum assured</span></td> -->
                     </tr>
                 </table>
             </div>
