--- a/src/app/features/crm/components/messaging-template/messaging-template.component.html
+++ b/src/app/features/crm/components/messaging-template/messaging-template.component.html
@@ -4,6 +4,7 @@
     </app-dynamic-breadcrumb>
   </div>
   <div class="me-4">
+<!--    <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>-->
     <div class="card mb-3">
       <div class="card-body">
         <p class="mt-3 light-bold">System</p>
@@ -19,6 +20,7 @@
                       name="system"
                       value="{{system.id}}"
                       (click)="selectSystem(system)"
+                      [checked]="selectedSystem?.id===system.id"
                     >
                     <label class="form-check-label" for="{{system.id}}">{{ system.systemName }}</label>
                   </div>
@@ -49,6 +51,7 @@
           </div>
         </div>
         <div class="row mt-3">
+          <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
           <p-table
             [value]="messageTemplates"
             [paginator]="true"
@@ -58,6 +61,7 @@
             [tableStyle]="{ 'min-width': '50rem' }"
             [totalRecords]="messageTemplateResponse?.totalElements"
             currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+            (onLazyLoad)="fetchTemplates($event)"
             [lazy]="true"
             [loading]="loading"
             [rowsPerPageOptions]="[10, 25, 50]"
@@ -131,7 +135,7 @@
           </div>
           <div class="mb-3">
             <label for="content" class="form-label">Active</label>
-            <select class="form-select" aria-label="Default select example" formControlName="active">
+            <select class="form-select" aria-label="Default select example" formControlName="status">
               <ng-container *ngFor="let s of status">
                 <option value="{{ s.value }}">{{ s.name }}</option>
               </ng-container>
